fix off_screen by off-screen

--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -190,7 +190,7 @@
     white-space: nowrap;
   }
 
-  .off_screen {
+  .off-screen {
     left: -100vw;
     position: absolute;
   }
